; ModuleID = '/home/carl/AnghaBench/openssl/crypto/rsa/extr_rsa_oaep.c_RSA_padding_check_PKCS1_OAEP.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/rsa/extr_rsa_oaep.c_RSA_padding_check_PKCS1_OAEP.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RSA_padding_check_PKCS1_OAEP(i8* %0, i32 %1, i8* %2, i32 %3, i32 %4, i8* %5, i32 %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i32, align 4
  store i8* %0, i8** %8, align 8
  store i32 %1, i32* %9, align 4
  store i8* %2, i8** %10, align 8
  store i32 %3, i32* %11, align 4
  store i32 %4, i32* %12, align 4
  store i8* %5, i8** %13, align 8
  store i32 %6, i32* %14, align 4
  %15 = load i8*, i8** %8, align 8
  %16 = load i32, i32* %9, align 4
  %17 = load i8*, i8** %10, align 8
  %18 = load i32, i32* %11, align 4
  %19 = load i32, i32* %12, align 4
  %20 = load i8*, i8** %13, align 8
  %21 = load i32, i32* %14, align 4
  %22 = call i32 @RSA_padding_check_PKCS1_OAEP_mgf1(i8* %15, i32 %16, i8* %17, i32 %18, i32 %19, i8* %20, i32 %21, i32* null, i32* null)
  ret i32 %22
}

declare dso_local i32 @RSA_padding_check_PKCS1_OAEP_mgf1(i8*, i32, i8*, i32, i32, i8*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
